fixtures/invalid/module-boundary-direct/src/features/tasks/routes/create.ts
import { db } from "../database/client.js";

void db;
